--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #CONFIG CONNECT DATABASE
 
-DATABASE="ywmmjubu" 
-USER="ywmmjubu" 
-PASSOWORD="i28AT2BHR5Z7no5IBXkXnZfeUSU7-pKv" 
-HOST="kesavan.db.elephantsql.com" 
-PORT="5432"
+DATABASE="" 
+USER="" 
+PASSOWORD="" 
+HOST="" 
+PORT="0000"
